<resources>
    <string name="app_name">YourChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_header">Авторизация</string>
    <string name="register_header">Регистрация</string>

    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="password_repeat_text">Подтвертите пароль</string>
    <string name="email_text">Email</string>
    <string name="name_text">Имя</string>
    <string name="family_name_text">Фамилия</string>
    <string name="menu_rooms">Чаты</string>
    <string name="menu_add_rooms">Создать чат</string>
    <string name="menu_personal_account">Личный кабинет</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_about">О программе</string>
</resources>