<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_add_room"
            android:icon="@drawable/add_rooms_image"
            android:title="@string/menu_add_rooms" />

        <item
            android:id="@+id/nav_personal_account"
            android:icon="@drawable/personal_cabinet_image"
            android:title="@string/menu_personal_account" />
    </group>
    <group android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_image"
            android:title="@string/menu_exit" />
    </group>
</menu>